--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <header>
     <ul>
-        <li><a href="wishlist.html">Tu lista de deseos</a></li>
+        <li><a href="wishlist.html" id="listaDeseos">Tu lista de deseos</a></li>
         <li><h1>Carta a santa</h1></li>
         <li><a href="resultado.html">Tu regalo</a></li>
     </ul>
